--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/k-maciejewski/libminer
+URL: https://github.com/k-maciejewski/libminer, https://k-maciejewski.github.io/libminer/
 BugReports: https://github.com/k-maciejewski/libminer/issues
 Suggests: 
     testthat (>= 3.0.0)
